--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
   <!-- CRM tracking code -->
-  <script
+<!--   <script
 src='//in.fw-cdn.com/32005483/1060723.js'
 chat='false'>
-</script>
+</script> -->
 </head>
 <body>
 
