--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
   <!-- CRM tracking code -->
-  <script
-src='//in.fw-cdn.com/32005483/1060723.js'
+ <script
+src='//in.fw-cdn.com/31719983/876676.js'
 chat='false'>
 </script>
 </head>
@@ -27,13 +27,21 @@ chat='false'>
 </div>
 
 
-  <!-- Freshdesk script -->
-<script type="text/javascript" src="https://s3.amazonaws.com/assets.freshdesk.com/widget/freshwidget.js"></script>
-<style type="text/css" media="screen, projection">
-	@import url(https://s3.amazonaws.com/assets.freshdesk.com/widget/freshwidget.css); 
-</style> 
-<iframe title="Feedback Form" class="freshwidget-embedded-form" id="freshwidget-embedded-form" src="https://sachinnew.freshdesk.com/widgets/feedback_widget/new?&widgetType=embedded" scrolling="no" height="500px" width="100%" frameborder="0" >
-</iframe>
+  <!-- Freshchat script -->
+<script>
+  function initFreshChat() {
+    window.fcWidget.init({
+      	 token: "98a0782b-8b3b-42ef-bbbe-85744f2acd34",
+	 host: "https://freshworks-whatsapp-demo-us.freshchat.com"
+    });
+  }
+  function initialize(i,t){var e;i.getElementById(t)?
+  initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,
+  e.src="https://freshworks-whatsapp-demo-us.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}
+  function initiateCall(){initialize(document,"Freshchat-js-sdk")}
+  window.addEventListener?window.addEventListener("load",initiateCall,!1):
+  window.attachEvent("load",initiateCall,!1);
+</script>
   
 </body>
 </html>
