--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ chat=‘false’>
 
   <!-- Freshchat script -->
 
-	<script>
+<!-- 	<script>
   function initFreshChat() {
     window.fcWidget.init({
       	 token: "afce33f9-e76d-46d4-b35d-4a2d9b3f28d2",
@@ -40,7 +40,7 @@ chat=‘false’>
   function initiateCall(){initialize(document,"Freshchat-js-sdk")}
   window.addEventListener?window.addEventListener("load",initiateCall,!1):
   window.attachEvent("load",initiateCall,!1);
-</script>
+</script> -->
 
 
 
