--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <!-- CRM tracking code -->
 
 <script
-src=‘//fw-cdn.com/1339706/2343303.js’
-chat=‘false’>
+src='//fw-cdn.com/1339706/2343303.js'
+chat='false'>
 </script>
 
 </head>
