--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@ chat='false'>
 
 
 
-
+<script>
+  function initFreshChat() {
+    window.fcWidget.init({
+      	 token: "afce33f9-e76d-46d4-b35d-4a2d9b3f28d2",
+	 host: "https://neora-org.freshchat.com"
+    });
+  }
+  function initialize(i,t){var e;i.getElementById(t)?
+  initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,
+  e.src="https://neora-org.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}
+  function initiateCall(){initialize(document,"Freshchat-js-sdk")}
+  window.addEventListener?window.addEventListener("load",initiateCall,!1):
+  window.attachEvent("load",initiateCall,!1);
+</script> 
 
 
 
