--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ chat='false'>
 
 <!-- Navbar (sit on top) -->
 
-<form action="/submit-email" method="post">
+<form >
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
     <br><br>
