--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@ chat='false'>
 </script>
 </head>
 <body>
-  <form name="neora-freshworks-test-external" action="#" method="post" autocomplete="off">
+<form name="neora-freshworks-test-external">
     <label for="email">Email:</label>
     <input type="text" id="email" name="email"><br><br>
-    
+
     <label for="customer_id">Customer ID:</label>
     <input type="text" id="customer_id" name="customer_id"><br><br>
-    
+
     <button type="submit">Submit</button>
   </form>
+
 
 <!-- chat code -->
 <script>
