--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ chat='false'>
 <form >
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
+	<input type="text" id="mobile" name="mobile" required> Mobile </input>
     <br><br>
     <input type="submit" value="Submit">
   </form>
