--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ chat='false'>
 
 <!-- Navbar (sit on top) -->
 
-<form >
+<form name="test_form_name" id="test_form_id" >
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
 	<input type="text" id="mobile" name="mobile" required> Mobile </input>
