--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ chat='false'>
 <form name="test_form_name" id="test_form_id" >
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
-	<input type="text" id="mobile" name="mobile" required> Mobile </input>
+	<label for="mobile">Mobile:</label>
+	<input type="text" id="mobile" name="mobile" required>
     <br><br>
     <input type="submit" value="Submit">
   </form>
